--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,12 @@
-tmp/*
 _Shopware_Plugins
 database.rules.json
 firebase.json
 LICENSE
 package-lock.json
+yarn.lock
 .prettierrc
 .idea/
 .vscode/
 node_modules/
 build
 .DS_Store
-*.tgz
-my-app*
-template/src/__tests__/__snapshots__/
-lerna-debug.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/.changelog
-.npm/
